--- a/style.css
+++ b/style.css
@@ -146,12 +146,16 @@ main {
 }
 
 /* Global/base */
+/* Lagt till h1 själv */
+h1,
 h2,
 h3 {
   font-weight: var(--fw-bold);
   line-height: 1;
 }
 
+/* Lagt till h1 själv */
+h1,
 h2 {
   font-size: var(--fs-700);
 }
