--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ body {
   display: grid;
   grid-template-areas:
     "header"
-    "hero"
+    "top-hero"
     "newsletter"
     "main"
     "plants-inspiration"
@@ -315,8 +315,8 @@ header {
 }
 
 /* COMPONENT HERO WITH IMAGE GALLERY*/
-.hero {
-  grid-area: hero;
+.top-hero {
+  grid-area: top-hero;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -325,59 +325,35 @@ header {
   gap: var(--gap-global);
 
   .gallery {
-    width: 100%;
-    height: 30rem;
     background-color: var(--clr-neutral-100);
     box-shadow: var(--border-shadow);
+    gap: 0;
+    border: 1rem solid var(--clr-neutral-100);
+
+    .gallery-img {
+      object-fit: cover;
+      height: 100%;
+    }
+
+    img:nth-child(1) {
+      grid-column: span 4;
+      grid-row: span 2;
+    }
+
+    img:nth-child(2),
+    img:nth-child(3) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+
+    img:nth-child(4),
+    img:nth-child(5),
+    img:nth-child(6) {
+      grid-column: span 4;
+      grid-row: span 1;
+    }
   }
 }
-
-/* .gallery {
-  display: grid;
-  margin: auto;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, auto);
-
-  img {
-    height: 50%;
-  }
-
-  img:nth-child(1) {
-    grid-column: 1/3;
-    grid-row: 1/3;
-    background-color: aqua;
-  }
-
-  img:nth-child(2) {
-    grid-column: 3/4;
-    grid-row: 1/2;
-    background-color: blue;
-  }
-
-  img:nth-child(3) {
-    grid-column: 4/5;
-    grid-row: 1/2;
-    background-color: blueviolet;
-  }
-
-  img:nth-child(4) {
-    grid-column: 5/7;
-    grid-row: 1/2;
-    background-color: green;
-  }
-
-  img:nth-child(5) {
-    grid-column: 3/5;
-    grid-row: 2/3;
-    background-color: yellow;
-  }
-
-  img:nth-child(6) {
-    grid-column: 5/7;
-    grid-row: 2/3;
-    background-color: red;
-  }
-} */
 
 .newsletter {
   grid-area: newsletter;
