--- a/style.css
+++ b/style.css
@@ -316,9 +316,7 @@ header {
       li > a.menu-link {
         text-transform: uppercase;
         font-weight: var(--fw-semi-bold);
-
-        /* Förbättra detta */
-        padding-block: 0.8rem;
+        padding: 0.8rem;
 
         &:hover {
           background-color: var(--clr-accent);
@@ -404,6 +402,12 @@ header {
       display: flex;
       justify-content: center;
       align-items: center;
+
+      &:hover {
+        background-color: var(--clr-neutral-100);
+        color: var(--clr-accent);
+        border: 1px solid var(--clr-accent);
+      }
     }
   }
 }
@@ -434,8 +438,15 @@ main {
   }
 
   ul.cards > li.card {
-    grid-column: span 3;
+    display: grid;
+    grid-column: span 4;
     background-color: var(--clr-neutral-100);
+    padding: 1rem;
+    gap: 1rem;
+
+    img {
+      object-fit: cover;
+    }
   }
 }
 
@@ -452,6 +463,13 @@ main {
 
     button {
       justify-self: end;
+      cursor: pointer;
+
+      &:hover {
+        background-color: var(--clr-neutral-100);
+        color: var(--clr-accent);
+        border: 1px solid var(--clr-accent);
+      }
     }
   }
 }
