--- a/style.css
+++ b/style.css
@@ -234,7 +234,6 @@ body {
     "plants-inspiration"
     "footer";
   grid-template-columns: 1fr;
-  /* grid-template-rows: repeat(6, auto); */
   grid-template-rows: min-content auto auto auto auto auto;
   min-height: 100vh;
   gap: var(--gap-global);
@@ -437,14 +436,17 @@ main {
     gap: var(--gap-global);
   }
 
-  ul.cards > li.card {
-    display: grid;
+  .card {
     grid-column: span 4;
     background-color: var(--clr-neutral-100);
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
 
     img {
+      height: 300px;
+      width: 100%;
       object-fit: cover;
     }
   }
