--- a/style.css
+++ b/style.css
@@ -248,7 +248,6 @@ body {
 /* Sets a max-width to control margins on the page - applied to children */
 .max-width {
   width: 100%;
-  /* max-width: 1024px; */
   max-width: 64rem;
 }
 
@@ -358,6 +357,7 @@ header {
     box-shadow: var(--border-shadow);
     gap: 0;
     border: 1rem solid var(--clr-neutral-100);
+    grid-template-rows: repeat(2, 1fr);
 
     .gallery-img {
       object-fit: cover;
@@ -391,7 +391,7 @@ header {
   background-color: var(--clr-neutral-100);
 
   .subscribe-form {
-    width: min(40%, 80%);
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -502,5 +502,79 @@ footer {
   a {
     color: var(--clr-neutral-100);
     font-weight: var(--fw-semi-bold);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .max-width {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 875px) {
+  header > nav > ul.menu {
+    display: none;
+  }
+
+  .top-hero {
+    .gallery {
+      img {
+        aspect-ratio: 1/1;
+      }
+      img:nth-child(1),
+      img:nth-child(2),
+      img:nth-child(3) {
+        grid-column: span 4;
+        grid-row: span 1;
+      }
+
+      img:nth-child(4),
+      img:nth-child(5),
+      img:nth-child(6) {
+        grid-column: span 4;
+        grid-row: span 2;
+      }
+    }
+  }
+
+  .newsletter {
+    article {
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      text-align: center;
+    }
+
+    .subscribe-form {
+      width: 80%;
+      margin-right: 0;
+    }
+  }
+
+  main {
+    ul.cards {
+      gap: 0.75rem;
+    }
+
+    .card {
+      grid-column: span 6;
+    }
+  }
+
+  .plants-inspiration {
+    article {
+      flex-direction: column;
+      text-align: center;
+      gap: 2rem;
+    }
+
+    .inspiration-textbox {
+      margin-left: 0;
+    }
+  }
+
+  .menu-footer {
+    display: none;
   }
 }
