--- a/style.css
+++ b/style.css
@@ -511,6 +511,7 @@ footer {
   }
 }
 
+/* TABLET */
 @media screen and (max-width: 875px) {
   header > nav > ul.menu {
     display: none;
@@ -532,7 +533,7 @@ footer {
       img:nth-child(5),
       img:nth-child(6) {
         grid-column: span 4;
-        grid-row: span 2;
+        grid-row: span 1;
       }
     }
   }
@@ -576,5 +577,40 @@ footer {
 
   .menu-footer {
     display: none;
+  }
+}
+
+/* MOBILE */
+@media screen and (max-width: 450px) {
+  .top-hero {
+    .gallery {
+      img:nth-child(1),
+      img:nth-child(2) {
+        grid-column: span 6;
+        grid-row: span 1;
+      }
+
+      img:nth-child(3),
+      img:nth-child(4) {
+        grid-column: span 6;
+        grid-row: span 1;
+      }
+
+      img:nth-child(5),
+      img:nth-child(6) {
+        grid-column: span 6;
+        grid-row: span 1;
+      }
+    }
+  }
+
+  main {
+    ul.cards {
+      gap: 1rem;
+    }
+
+    .card {
+      grid-column: span 12;
+    }
   }
 }
