--- a/style.css
+++ b/style.css
@@ -198,6 +198,10 @@ a {
   align-items: center;
 }
 
+.align-items-center {
+  align-items: center;
+}
+
 .flex-column {
   flex-direction: column;
 }
@@ -318,7 +322,9 @@ body {
 
   .logotype-text {
     text-transform: uppercase;
-    font-weight: var(--fw-bold);
+    font-size: var(--fs-600);
+    font-weight: var(--fw-500);
+    line-height: 0.9;
   }
 }
 
@@ -530,6 +536,7 @@ footer {
   padding-block: var(--space-100);
   padding-inline: var(--space-400);
   transition: all 0.5s ease;
+  font-size: var(--fs-500);
 
   &:hover {
     background-color: var(--clr-neutral-100);
@@ -563,7 +570,7 @@ footer {
 /* KEEP SO MARGIN WHEN SCREEN ARE SMALLER THAN 1024px */
 @media screen and (max-width: 1023px) {
   .max-width {
-    width: 95%;
+    width: 90%;
   }
 }
 
