--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ main {
 }
 
 /* Global/base */
-/* I have added h1 */
+/* I've added h1 */
 h1,
 h2,
 h3 {
@@ -161,7 +161,7 @@ h3 {
   line-height: 1;
 }
 
-/* I have added h1 */
+/* I've added h1 */
 h1,
 h2 {
   font-size: var(--fs-700);
@@ -347,10 +347,15 @@ a:focus {
   outline: none;
 }
 
-.cta-btn:focus,
-input[type="email"]:focus {
+.cta-btn:focus {
   background-color: var(--clr-accent-light-1);
   color: var(--clr-accent);
+  font-weight: var(--fw-semi-bold);
+  outline-color: var(--clr-accent);
+}
+
+input[type="email"]:focus {
+  background-color: var(--clr-accent-light-1);
   font-weight: var(--fw-semi-bold);
   outline-color: var(--clr-accent);
 }
@@ -386,7 +391,7 @@ header {
         text-decoration: none;
         font-weight: var(--fw-semi-bold);
         padding: var(--space-400);
-        transition: background-color 0.5s ease-in-out;
+        transition: background-color 1s ease-in-out;
 
         &:hover {
           background-color: var(--clr-accent);
