--- a/style.css
+++ b/style.css
@@ -522,6 +522,27 @@ main {
       flex-wrap: wrap;
       gap: var(--space-100);
     }
+
+    .card-footer {
+      gap: var(--space-400);
+
+      .avatar {
+        border: 2px solid var(--clr-primary-dark);
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+
+        img {
+          height: 100%;
+        }
+      }
+
+      .meta-info {
+        p.author {
+          font-weight: var(--fw-bold);
+        }
+      }
+    }
   }
 }
 
@@ -542,8 +563,8 @@ main {
   }
 }
 
-/* Footer */
-footer {
+/* Footer of the page */
+.page-footer {
   grid-area: footer;
   background-color: var(--clr-accent);
   color: var(--clr-neutral-100);
