--- a/style.css
+++ b/style.css
@@ -529,7 +529,7 @@ main {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 40%;
+        width: 5rem;
         opacity: 0.5;
       }
     }
